# currency_exchange

./: .env.example  .gitignore  README.md  currency_converter.db  pyproject.toml  render.yaml
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: api.py
app/api/endpoints/: converter.py  transactions.py
app/core/: config.py  database.py  exceptions.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: conversion_service.py  rate_service.py  transaction_service.py
docs/: api_documentation.md  prd.md  system-design.md
tests/: conftest.py
tests/api/: test_converter.py  test_transactions.py
tests/services/: test_conversion_service.py  test_rate_service.py  test_transaction_service.py
